# Oldtudat

./: CodeCheck605_131115_Version2_Revision519.diff
Tudat/Astrodynamics/: CMakeLists.txt  physicalConstants.cpp  unitTestPhysicalConstants.cpp
Tudat/Astrodynamics/Aerodynamics/: CMakeLists.txt  aerodynamicCoefficientGenerator.cpp  aerodynamicCoefficientGenerator.h  aerodynamicCoefficientInterface.h  aerodynamicForce.h  aerodynamicMoment.cpp  aerodynamicMoment.h  aerodynamics.cpp  aerodynamics.h  atmosphereModel.h  exponentialAtmosphere.cpp  exponentialAtmosphere.h  hypersonicLocalInclinationAnalysis.cpp  hypersonicLocalInclinationAnalysis.h  standardAtmosphere.h  tabulatedAtmosphere.cpp  tabulatedAtmosphere.h
Tudat/Astrodynamics/BasicAstrodynamics/: CMakeLists.txt  convertMeanAnomalyBase.h  convertMeanAnomalyToEccentricAnomaly.cpp  convertMeanAnomalyToEccentricAnomaly.h  convertMeanAnomalyToHyperbolicEccentricAnomaly.cpp  convertMeanAnomalyToHyperbolicEccentricAnomaly.h  forceModel.h  generalizedForceModel.h  keplerPropagator.cpp  keplerPropagator.h  momentDueToForceModel.cpp  momentDueToForceModel.h  momentModel.h  orbitalElementConversions.cpp  orbitalElementConversions.h  propagator.h  propagatorDataContainer.h  pureMomentModel.h  seriesPropagator.cpp  seriesPropagator.h  unitTestConvertMeanAnomalyToEccentricAnomaly.cpp  unitTestKeplerPropagator.cpp  unitTestMomentDueToForce.cpp  unitTestOrbitalElementConversions.cpp
Tudat/Astrodynamics/Bodies/: CMakeLists.txt  body.h  celestialBody.h  planet.cpp  planet.h  vehicle.h  vehicleExternalModel.h
Tudat/Astrodynamics/EnvironmentModels/: atmosphereModel.h  centralGravityField.cpp  centralGravityField.h  exponentialAtmosphere.cpp  exponentialAtmosphere.h  gravityFieldModel.h  sphericalHarmonicsGravityField.cpp  sphericalHarmonicsGravityField.h  standardAtmosphere.h  tabulatedAtmosphere.cpp  tabulatedAtmosphere.h  unitTestExponentialAtmosphere.cpp  unitTestSphericalHarmonicsGravityField.cpp  unitTestTabulatedAtmosphere.cpp
Tudat/Astrodynamics/Ephemeris/: CMakeLists.txt  approximatePlanetPositions.cpp  approximatePlanetPositions.h  approximatePlanetPositionsBase.cpp  approximatePlanetPositionsBase.h  approximatePlanetPositionsCircularCoplanar.cpp  approximatePlanetPositionsCircularCoplanar.h  ephemeris.h
Tudat/Astrodynamics/ForceModels/: CMakeLists.txt  aerodynamicCoefficientGenerator.cpp  aerodynamicCoefficientGenerator.h  aerodynamicForce.h  aerodynamics.cpp  forceModel.h  gravitationalForceModel.h  hypersonicLocalInclinationAnalysis.cpp  hypersonicLocalInclinationAnalysis.h  unitTestAerodynamicMomentAndAerodynamicForce.cpp  unitTestAerodynamicsNamespace.cpp  unitTestCoefficientGenerator.cpp
Tudat/Astrodynamics/Gravitation/: CMakeLists.txt  centralGravityField.cpp  centralGravityField.h  gravitationalForceModel.cpp  gravitationalForceModel.h  gravityFieldModel.h  sphericalHarmonicsGravityField.cpp  sphericalHarmonicsGravityField.h
Tudat/Astrodynamics/MissionSegments/: CMakeLists.txt  capturePhase.h  deepSpaceManeuver.h  escapeAndCapture.cpp  escapeAndCapture.h  escapePhase.h  gravityAssist.cpp  gravityAssist.h  lambertTargeter.cpp  lambertTargeter.h  librationPoint.cpp  librationPoint.h  trajectoryDesignMethod.h  unitTestDeepSpaceManeuver.cpp  unitTestEscapeAndCapture.cpp  unitTestGravityAssist.cpp  unitTestLambertTargeter.cpp  unitTestLibrationPoints.cpp
Tudat/Astrodynamics/MomentModels/: aerodynamicMoment.cpp  aerodynamicMoment.h  momentModel.h
Tudat/Astrodynamics/Propagators/: CMakeLists.txt  cartesianStateNumericalPropagator.cpp  cartesianStateNumericalPropagator.h  keplerPropagator.cpp  keplerPropagator.h  numericalPropagator.cpp  numericalPropagator.h  propagator.h  propagatorDataContainer.h  seriesPropagator.cpp  seriesPropagator.h  unitTestKeplerPropagator.cpp  unitTestNumericalPropagator.cpp
Tudat/Astrodynamics/ReferenceFrames/: CMakeLists.txt  referenceFrameTransformations.cpp  referenceFrameTransformations.h  unitTestReferenceFrameTransformations.cpp
Tudat/Astrodynamics/States/: CMakeLists.txt  approximatePlanetPositions.cpp  approximatePlanetPositions.h  approximatePlanetPositionsBase.cpp  approximatePlanetPositionsBase.h  approximatePlanetPositionsCircularCoplanar.cpp  approximatePlanetPositionsCircularCoplanar.h  cartesianElements.h  cartesianPositionElements.h  cartesianVelocityElements.h  convertMeanAnomalyBase.h  convertMeanAnomalyToEccentricAnomaly.cpp  convertMeanAnomalyToEccentricAnomaly.h  convertMeanAnomalyToHyperbolicEccentricAnomaly.cpp  convertMeanAnomalyToHyperbolicEccentricAnomaly.h  ephemeris.h  keplerianElements.h  orbitalElementConversions.cpp  orbitalElementConversions.h  state.h  unitTestApproximatePlanetPositions.cpp  unitTestCartesianElements.cpp  unitTestConvertMeanAnomalyToEccentricAnomaly.cpp  unitTestKeplerianElements.cpp  unitTestOrbitalElementConversions.cpp  unitTestState.cpp  writeStateHistoryToFile.cpp  writeStateHistoryToFile.h
Tudat/InputOutput/: CMakeLists.txt  basicInputOutput.cpp  basicInputOutput.h  matrixTextFileReader.cpp  matrixTextFileReader.h  twoLineElementData.cpp  twoLineElementData.h  twoLineElementsTextFileReader.cpp  twoLineElementsTextFileReader.h
Tudat/InputOutput/UnitTests/: unitTestBasicInputOutput.cpp  unitTestMatrixTextFileReader.cpp  unitTestTwoLineElementsTextFileReader.cpp
Tudat/Mathematics/: CMakeLists.txt  basicMathematicsFunctions.cpp  basicMathematicsFunctions.h  unitConversions.h  unitTestBasicMathematicsFunctions.cpp  unitTestUnitConversions.cpp
Tudat/Mathematics/BasicMathematics/: CMakeLists.txt  coordinateConversions.cpp  coordinateConversions.h  nearestNeighbourSearch.cpp  nearestNeighbourSearch.h
Tudat/Mathematics/GeometricShapes/: CMakeLists.txt  capsule.cpp  capsule.h  compositeSurfaceGeometry.cpp  compositeSurfaceGeometry.h  conicalFrustum.cpp  conicalFrustum.h  geometricShapesToFile.cpp  geometricShapesToFile.h  lawgsPartGeometry.cpp  lawgsPartGeometry.h  quadrilateralMeshedSurfaceGeometry.cpp  quadrilateralMeshedSurfaceGeometry.h  singleSurfaceGeometry.cpp  singleSurfaceGeometry.h  sphereSegment.cpp  sphereSegment.h  torus.h  (+3 more)
(+80 files in other folders)
